# henx

./: .gitignore  Cargo.toml  build.rs
src/: capture.rs  lib.rs  main.rs
src/encoder/: mod.rs
src/event_tracker/: mod.rs
src/event_tracker/mac/: mod.rs
src/event_tracker/win/: mod.rs
src/mac/: mod.rs
src/mac/enc-swift/: Package.swift
src/mac/enc-swift/src/: utils.swift
