[package]
name = "henx"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
colog = "1.3.0"
scap = "0.0.8"
anyhow = "1.0"

crossbeam = "0.8.4"
core-foundation = "0.10.0"
core-graphics = "0.24.0"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"
cidre = { rev = "6d6feafc7b0b84248500082f8d9467b6676811ef", git = "https://github.com/TestMace/cidre.git", features= ["cf", "av", "cv", "ns", "cm"] }
ffi="0.1.1"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.4.2"
